--- a/Regresyon_Odev_1.ipynb
+++ b/Regresyon_Odev_1.ipynb
@@ -7,6 +7,8 @@
     "1. Birkaç ülke için elinizde finansal, ekonomik ve sosyal göstergeler hakkında Dünya Bankası verileri olduğunu varsayalım. Bu ülkelerdeki gelişme düzeyini etkileyen faktörleri ölçmek istiyorsunuz. Bu amaçla, milli gelirin nüfusa bölümü olarak tanımlanan kişi başına düşen milli geliri, kalkınma seviyesi için bir vekil olarak kullanmaya karar verdiniz. Kişi başına geliri tahmin etmek için veri kümenizdeki bazı özellikleri kullanmak istiyorsunuz. Bu görev bir sınıflandırma görevi mi yoksa bir regresyon görevi mi? Niçin?\n",
     "\n",
     "2. Aşağıdaki argümanlardan hangileri yanlıştır ve neden?\n",
+    "\n",
+    "\n",
     "    OLS, özel bir doğrusal regresyon modelidir.\n",
     "    Regresyon modelleri, doğrusal regresyon varsayımlarını karşılamıyorsa kullanışsız hale gelir.\n",
     "    Estimation ve prediction, doğrusal regresyon modelleri bağlamında aynı şeydir.\n",
@@ -18,12 +20,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Elimizdeki nicel degiskenlerden oturu regresyon analizi yapmamiz uygun olur."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2. OLS bir optimizasyon algoritmasidir ve dogrusal regrersyon modelinin tahmininde kulanilir. \n",
+    "Regresyon modelleri, doğrusal regresyon varsayımlarını karşılamıyorsa kullanışsız hale gelir.\n",
+    "Estimation ve prediction, doğrusal regresyon modelleri bağlamında aynı şeydir.\n"
+   ]
   },
   {
    "cell_type": "markdown",
