--- a/Regresyon_Odev_1.ipynb
+++ b/Regresyon_Odev_1.ipynb
@@ -21,6 +21,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "X olarak adlandırılan bir değişken, öngörücü, açıklayıcı veya bağımsız değişken olarak kabul edilir.\n",
+    "\n",
+    "Y olarak adlandırılan diğer değişken, yanıt, sonuç veya bağımlı değişken olarak kabul edilir.\n",
+    "\n",
+    "Basit doğrusal regresyon, sıfatı “basit” olarak alır, çünkü yalnızca bir tahmini değişkenin çalışması ile ilgilidir."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. Elimizdeki nicel degiskenlerden oturu regresyon analizi yapmamiz uygun olur."
    ]
   },
@@ -28,15 +39,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. OLS bir optimizasyon algoritmasidir ve dogrusal regrersyon modelinin tahmininde kulanilir. \n",
-    "Regresyon modelleri, doğrusal regresyon varsayımlarını karşılamıyorsa kullanışsız hale gelir.\n",
-    "Estimation ve prediction, doğrusal regresyon modelleri bağlamında aynı şeydir.\n"
+    "2. OLS bir optimizasyon algoritmasidir ve dogrusal regresyon modelinin tahmininde kulanilir. \n",
+    "   Regresyon modelleri, doğrusal regresyon varsayımlarını karşılamıyorsa kullanışsız hale gelir. \n",
+    "   Estimation ve prediction, doğrusal regresyon modelleri bağlamında aynı şeydir. \n",
+    "   Doğrusal regresyon modeli sadece bir tür regresyon modelidir. Regresyon problemleri, Support Vector Machines veya Random        Forests gibi başka modellerle de çözülebilir. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3. Proje yöneticinizin, şirketinizin sunduğu hangi ücretsiz hizmetlerin, müşterilerinizin daha fazla ücretli hizmet satın almasını sağladığını bulmanızı istediğini varsayalım. Bu görevi bir regresyon problemi olarak formüle edin ve üzerinde çalışmak istediğiniz potansiyel sonucu ve özellikleri yazın. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OrtalamaUrunSatisi =a + $\\beta$UcretsizTemelSatisArttirmaTavsiyeleri + $\\beta$UcretsizAnalizRaporlari +  $\\beta$UcretsizMarketKarsilastirmaRaporu + $\\beta$EnIyiOdulleri + $\\beta$GiderIndirimleri + $\\beta$UcretsizMusteriServisiDestegi\n"
+   ]
   }
  ],
  "metadata": {
