--- a/Regresyon_Odev_4.ipynb
+++ b/Regresyon_Odev_4.ipynb
@@ -1894,6 +1894,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modeldeki degiskenler anlamlidir. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
