--- a/Regresyon_Odev_4.ipynb
+++ b/Regresyon_Odev_4.ipynb
@@ -698,6 +698,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Ev Fiyatları verilerini Kaggle'dan indirin.***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1477,6 +1484,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Ev fiyatları modelinizi tekrar çalıştırın ve sonuçları yorumlayın. Hangi özellikler istatistiksel olarak anlamlı ve hangileri değildir?***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1690,6 +1704,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**** Şimdi, anlamsız özellikleri modelinizden hariç tutun. Bir şey değişti mi?***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -1879,6 +1900,15 @@
     "X = sm.add_constant(X)\n",
     "results = sm.OLS(Y, X).fit()\n",
     "results.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Ev fiyatları ile olan ilişkilerini belirleyerek istatistiksel olarak anlamlı katsayıları yorumlayın. Ev fiyatları üzerinde hangi özellikler daha belirgin bir etkiye sahiptir?***\n",
+    "\n",
+    "***Sonuçlar size mantıklı geliyor mu? Değilse, potansiyel nedenleri açıklamaya çalışın.***"
    ]
   },
   {
