--- a/Regresyon_Odev_6.ipynb
+++ b/Regresyon_Odev_6.ipynb
@@ -101,10 +101,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   381.1</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Wed, 17 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:49:37</td>     <th>  Log-Likelihood:    </th> <td> -14016.</td> \n",
+       "  <th>Time:</th>                 <td>08:06:25</td>     <th>  Log-Likelihood:    </th> <td> -14016.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1168</td>      <th>  AIC:               </th> <td>2.805e+04</td>\n",
@@ -180,8 +180,8 @@
        "Dep. Variable:              SalePrice   R-squared:                       0.767\n",
        "Model:                            OLS   Adj. R-squared:                  0.765\n",
        "Method:                 Least Squares   F-statistic:                     381.1\n",
-       "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:49:37   Log-Likelihood:                -14016.\n",
+       "Date:                Wed, 17 Apr 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        08:06:25   Log-Likelihood:                -14016.\n",
        "No. Observations:                1168   AIC:                         2.805e+04\n",
        "Df Residuals:                    1157   BIC:                         2.811e+04\n",
        "Df Model:                          10                                         \n",
@@ -264,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Modelimizdeki tahminlerin 300000 fiyatindan sonra cok da iyi tahmin edilmedigini goruyoruz. "
+    "Modelimizdeki tahminlerin 300000 fiyatindan sonra cok da iyi tahmin edilmedigini goruyoruz. Bunun nedeni kullandigimiz degiskenlerin yetersizliginden kaynaklaniyor olabilir. "
    ]
   },
   {
@@ -367,10 +367,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   495.4</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Wed, 17 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:49:37</td>     <th>  Log-Likelihood:    </th> <td> -17459.</td> \n",
+       "  <th>Time:</th>                 <td>08:06:26</td>     <th>  Log-Likelihood:    </th> <td> -17459.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1460</td>      <th>  AIC:               </th> <td>3.494e+04</td>\n",
@@ -446,8 +446,8 @@
        "Dep. Variable:              SalePrice   R-squared:                       0.774\n",
        "Model:                            OLS   Adj. R-squared:                  0.772\n",
        "Method:                 Least Squares   F-statistic:                     495.4\n",
-       "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:49:37   Log-Likelihood:                -17459.\n",
+       "Date:                Wed, 17 Apr 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        08:06:26   Log-Likelihood:                -17459.\n",
        "No. Observations:                1460   AIC:                         3.494e+04\n",
        "Df Residuals:                    1449   BIC:                         3.500e+04\n",
        "Df Model:                          10                                         \n",
@@ -545,10 +545,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   255.3</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Wed, 17 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:49:38</td>     <th>  Log-Likelihood:    </th> <td> -13983.</td> \n",
+       "  <th>Time:</th>                 <td>08:06:26</td>     <th>  Log-Likelihood:    </th> <td> -13983.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1168</td>      <th>  AIC:               </th> <td>2.800e+04</td>\n",
@@ -642,8 +642,8 @@
        "Dep. Variable:              SalePrice   R-squared:                       0.780\n",
        "Model:                            OLS   Adj. R-squared:                  0.777\n",
        "Method:                 Least Squares   F-statistic:                     255.3\n",
-       "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        22:49:38   Log-Likelihood:                -13983.\n",
+       "Date:                Wed, 17 Apr 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        08:06:26   Log-Likelihood:                -13983.\n",
        "No. Observations:                1168   AIC:                         2.800e+04\n",
        "Df Residuals:                    1151   BIC:                         2.809e+04\n",
        "Df Model:                          16                                         \n",
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
