--- a/Regresyon_Odev_7.ipynb
+++ b/Regresyon_Odev_7.ipynb
@@ -268,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -431,6 +433,13 @@
     "X = sm.add_constant(X)\n",
     "results = sm.OLS(y, X).fit()\n",
     "results.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modelimizdeki R kare ve ayarlanmis R kare degerleri %78.9 "
    ]
   },
   {
