--- a/Regresyon_Odev_5.ipynb
+++ b/Regresyon_Odev_5.ipynb
@@ -34,9 +34,25 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Formatted Date', 'Summary', 'Precip Type', 'Temperature (C)',\n",
+       "       'Apparent Temperature (C)', 'Humidity', 'Wind Speed (km/h)',\n",
+       "       'Wind Bearing (degrees)', 'Visibility (km)', 'Loud Cover',\n",
+       "       'Pressure (millibars)', 'Daily Summary'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sicaklik = pd.read_csv('data/weatherHistory.csv')"
+    "sicaklik = pd.read_csv('data/weatherHistory.csv')\n",
+    "sicaklik.columns"
    ]
   },
   {
@@ -128,10 +144,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>1.949e+04</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
+       "  <th>Date:</th>             <td>Sat, 20 Apr 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:43:45</td>     <th>  Log-Likelihood:    </th> <td>-1.7046e+05</td>\n",
+       "  <th>Time:</th>                 <td>21:37:39</td>     <th>  Log-Likelihood:    </th> <td>-1.7046e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 96453</td>      <th>  AIC:               </th>  <td>3.409e+05</td> \n",
@@ -183,8 +199,8 @@
        "Dep. Variable:                      y   R-squared:                       0.288\n",
        "Model:                            OLS   Adj. R-squared:                  0.288\n",
        "Method:                 Least Squares   F-statistic:                 1.949e+04\n",
-       "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        21:43:45   Log-Likelihood:            -1.7046e+05\n",
+       "Date:                Sat, 20 Apr 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        21:37:39   Log-Likelihood:            -1.7046e+05\n",
        "No. Observations:               96453   AIC:                         3.409e+05\n",
        "Df Residuals:                   96450   BIC:                         3.409e+05\n",
        "Df Model:                           2                                         \n",
@@ -316,10 +332,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>1.666e+04</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
+       "  <th>Date:</th>             <td>Sat, 20 Apr 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:43:45</td>     <th>  Log-Likelihood:    </th> <td>-1.6669e+05</td>\n",
+       "  <th>Time:</th>                 <td>21:37:39</td>     <th>  Log-Likelihood:    </th> <td>-1.6669e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 96453</td>      <th>  AIC:               </th>  <td>3.334e+05</td> \n",
@@ -374,8 +390,8 @@
        "Dep. Variable:                      y   R-squared:                       0.341\n",
        "Model:                            OLS   Adj. R-squared:                  0.341\n",
        "Method:                 Least Squares   F-statistic:                 1.666e+04\n",
-       "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        21:43:45   Log-Likelihood:            -1.6669e+05\n",
+       "Date:                Sat, 20 Apr 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        21:37:39   Log-Likelihood:            -1.6669e+05\n",
        "No. Observations:               96453   AIC:                         3.334e+05\n",
        "Df Residuals:                   96449   BIC:                         3.334e+05\n",
        "Df Model:                           3                                         \n",
@@ -433,7 +449,7 @@
    "outputs": [],
    "source": [
     "Y = sicaklik_farki\n",
-    "X = sicaklik[['Humidity','Wind Speed (km/h)', 'Apparent Temperature (C)']] "
+    "X = sicaklik[['Humidity','Wind Speed (km/h)', 'Visibility (km)']] "
    ]
   },
   {
@@ -468,9 +484,9 @@
      "output_type": "stream",
      "text": [
       "Değişkenler: \n",
-      " [-1.47402192  0.07952038 -0.12697057]\n",
+      " [ 2.60664109  0.11990113 -0.05398318]\n",
       "Sabit değer (bias): \n",
-      " 2.679509748320702\n"
+      " -1.5755946860023338\n"
      ]
     }
    ],
@@ -490,25 +506,25 @@
        "<table class=\"simpletable\">\n",
        "<caption>OLS Regression Results</caption>\n",
        "<tr>\n",
-       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th>  <td>   0.679</td>  \n",
+       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th>  <td>   0.304</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th>  <td>   0.679</td>  \n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th>  <td>   0.303</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>6.809e+04</td> \n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>1.401e+04</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
+       "  <th>Date:</th>             <td>Sat, 20 Apr 2019</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:43:45</td>     <th>  Log-Likelihood:    </th> <td>-1.3198e+05</td>\n",
+       "  <th>Time:</th>                 <td>21:37:39</td>     <th>  Log-Likelihood:    </th> <td>-1.6938e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>No. Observations:</th>      <td> 96453</td>      <th>  AIC:               </th>  <td>2.640e+05</td> \n",
+       "  <th>No. Observations:</th>      <td> 96453</td>      <th>  AIC:               </th>  <td>3.388e+05</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td> 96449</td>      <th>  BIC:               </th>  <td>2.640e+05</td> \n",
+       "  <th>Df Residuals:</th>          <td> 96449</td>      <th>  BIC:               </th>  <td>3.388e+05</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Df Model:</th>              <td>     3</td>      <th>                     </th>      <td> </td>     \n",
@@ -519,33 +535,33 @@
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "              <td></td>                <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "          <td></td>             <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>const</th>                    <td>    2.6795</td> <td>    0.021</td> <td>  130.496</td> <td> 0.000</td> <td>    2.639</td> <td>    2.720</td>\n",
+       "  <th>const</th>             <td>   -1.5756</td> <td>    0.028</td> <td>  -56.605</td> <td> 0.000</td> <td>   -1.630</td> <td>   -1.521</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Humidity</th>                 <td>   -1.4740</td> <td>    0.021</td> <td>  -71.034</td> <td> 0.000</td> <td>   -1.515</td> <td>   -1.433</td>\n",
+       "  <th>Humidity</th>          <td>    2.6066</td> <td>    0.025</td> <td>  102.784</td> <td> 0.000</td> <td>    2.557</td> <td>    2.656</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Wind Speed (km/h)</th>        <td>    0.0795</td> <td>    0.000</td> <td>  169.559</td> <td> 0.000</td> <td>    0.079</td> <td>    0.080</td>\n",
+       "  <th>Wind Speed (km/h)</th> <td>    0.1199</td> <td>    0.001</td> <td>  179.014</td> <td> 0.000</td> <td>    0.119</td> <td>    0.121</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Apparent Temperature (C)</th> <td>   -0.1270</td> <td>    0.000</td> <td> -343.095</td> <td> 0.000</td> <td>   -0.128</td> <td>   -0.126</td>\n",
+       "  <th>Visibility (km)</th>   <td>   -0.0540</td> <td>    0.001</td> <td>  -46.614</td> <td> 0.000</td> <td>   -0.056</td> <td>   -0.052</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "  <th>Omnibus:</th>       <td>3960.277</td> <th>  Durbin-Watson:     </th> <td>   0.424</td>\n",
+       "  <th>Omnibus:</th>       <td>3833.895</td> <th>  Durbin-Watson:     </th> <td>   0.279</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Prob(Omnibus):</th>  <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>4781.959</td>\n",
+       "  <th>Prob(Omnibus):</th>  <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>4584.022</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Skew:</th>           <td>-0.465</td>  <th>  Prob(JB):          </th> <td>    0.00</td>\n",
+       "  <th>Skew:</th>           <td> 0.459</td>  <th>  Prob(JB):          </th> <td>    0.00</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>       <td> 3.570</td>  <th>  Cond. No.          </th> <td>    168.</td>\n",
+       "  <th>Kurtosis:</th>       <td> 3.545</td>  <th>  Cond. No.          </th> <td>    131.</td>\n",
        "</tr>\n",
        "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
       ],
@@ -554,27 +570,27 @@
        "\"\"\"\n",
        "                            OLS Regression Results                            \n",
        "==============================================================================\n",
-       "Dep. Variable:                      y   R-squared:                       0.679\n",
-       "Model:                            OLS   Adj. R-squared:                  0.679\n",
-       "Method:                 Least Squares   F-statistic:                 6.809e+04\n",
-       "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        21:43:45   Log-Likelihood:            -1.3198e+05\n",
-       "No. Observations:               96453   AIC:                         2.640e+05\n",
-       "Df Residuals:                   96449   BIC:                         2.640e+05\n",
+       "Dep. Variable:                      y   R-squared:                       0.304\n",
+       "Model:                            OLS   Adj. R-squared:                  0.303\n",
+       "Method:                 Least Squares   F-statistic:                 1.401e+04\n",
+       "Date:                Sat, 20 Apr 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        21:37:39   Log-Likelihood:            -1.6938e+05\n",
+       "No. Observations:               96453   AIC:                         3.388e+05\n",
+       "Df Residuals:                   96449   BIC:                         3.388e+05\n",
        "Df Model:                           3                                         \n",
        "Covariance Type:            nonrobust                                         \n",
-       "============================================================================================\n",
-       "                               coef    std err          t      P>|t|      [0.025      0.975]\n",
-       "--------------------------------------------------------------------------------------------\n",
-       "const                        2.6795      0.021    130.496      0.000       2.639       2.720\n",
-       "Humidity                    -1.4740      0.021    -71.034      0.000      -1.515      -1.433\n",
-       "Wind Speed (km/h)            0.0795      0.000    169.559      0.000       0.079       0.080\n",
-       "Apparent Temperature (C)    -0.1270      0.000   -343.095      0.000      -0.128      -0.126\n",
+       "=====================================================================================\n",
+       "                        coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "-------------------------------------------------------------------------------------\n",
+       "const                -1.5756      0.028    -56.605      0.000      -1.630      -1.521\n",
+       "Humidity              2.6066      0.025    102.784      0.000       2.557       2.656\n",
+       "Wind Speed (km/h)     0.1199      0.001    179.014      0.000       0.119       0.121\n",
+       "Visibility (km)      -0.0540      0.001    -46.614      0.000      -0.056      -0.052\n",
        "==============================================================================\n",
-       "Omnibus:                     3960.277   Durbin-Watson:                   0.424\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             4781.959\n",
-       "Skew:                          -0.465   Prob(JB):                         0.00\n",
-       "Kurtosis:                       3.570   Cond. No.                         168.\n",
+       "Omnibus:                     3833.895   Durbin-Watson:                   0.279\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             4584.022\n",
+       "Skew:                           0.459   Prob(JB):                         0.00\n",
+       "Kurtosis:                       3.545   Cond. No.                         131.\n",
        "==============================================================================\n",
        "\n",
        "Warnings:\n",
@@ -597,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ilk modele gorunurdeki sicaklik degiskenini eklememiz R kare ve ayarlanmis R kare yuzdesini %67.9 olarak neredeyse 2 katina cikardi. Boylece geride kalan aciklanamayan varyanslar da modelde aciklandi ve model biraz daha anlamli hale geldi. "
+    "Ilk modele Visibility (km) degiskenini eklememiz R kare ve ayarlanmis R kare yuzdesini dusurerek %30.4'e dusurdu. Boylece aciklanamayan varyanslar modelde az da olsa artti ve model daha anlamsiz hale geldi. "
    ]
   },
   {
@@ -617,9 +633,9 @@
     "\n",
     "*2) Nem ve rüzgar hızı etkileşimini dahil edilen modelde; AIC:3.3340 ve BIC:3.3340*\n",
     "\n",
-    "*3) Gorulen sicakligin eklendigi modelde; AIC:2.6400 ve BIC:2.6400*\n",
+    "*3) Gorulen sicakligin eklendigi modelde; AIC:3.388 ve BIC:3.388*\n",
     "\n",
-    "Sonucta yuksek R kare degeri ve dusuk AIC ve BIC degerleri nedeniyle son modelimiz daha aciklayici duruyor. \n"
+    "Sonucta az da olsa yuksek R kare degeri yuzunden, AIC ve BIC degerleri neredeyse ayni olarak ilk modelimiz daha aciklayici duruyor. \n"
    ]
   },
   {
@@ -939,10 +955,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   495.4</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Sat, 20 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:43:45</td>     <th>  Log-Likelihood:    </th> <td> -17459.</td> \n",
+       "  <th>Time:</th>                 <td>21:37:39</td>     <th>  Log-Likelihood:    </th> <td> -17459.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1460</td>      <th>  AIC:               </th> <td>3.494e+04</td>\n",
@@ -1018,8 +1034,8 @@
        "Dep. Variable:              SalePrice   R-squared:                       0.774\n",
        "Model:                            OLS   Adj. R-squared:                  0.772\n",
        "Method:                 Least Squares   F-statistic:                     495.4\n",
-       "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        21:43:45   Log-Likelihood:                -17459.\n",
+       "Date:                Sat, 20 Apr 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        21:37:39   Log-Likelihood:                -17459.\n",
        "No. Observations:                1460   AIC:                         3.494e+04\n",
        "Df Residuals:                    1449   BIC:                         3.500e+04\n",
        "Df Model:                          10                                         \n",
@@ -1419,10 +1435,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   304.8</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Tue, 16 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Sat, 20 Apr 2019</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:43:45</td>     <th>  Log-Likelihood:    </th> <td> -17398.</td> \n",
+       "  <th>Time:</th>                 <td>21:37:40</td>     <th>  Log-Likelihood:    </th> <td> -17398.</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  1460</td>      <th>  AIC:               </th> <td>3.483e+04</td>\n",
@@ -1522,8 +1538,8 @@
        "Dep. Variable:              SalePrice   R-squared:                       0.792\n",
        "Model:                            OLS   Adj. R-squared:                  0.789\n",
        "Method:                 Least Squares   F-statistic:                     304.8\n",
-       "Date:                Tue, 16 Apr 2019   Prob (F-statistic):               0.00\n",
-       "Time:                        21:43:45   Log-Likelihood:                -17398.\n",
+       "Date:                Sat, 20 Apr 2019   Prob (F-statistic):               0.00\n",
+       "Time:                        21:37:40   Log-Likelihood:                -17398.\n",
        "No. Observations:                1460   AIC:                         3.483e+04\n",
        "Df Residuals:                    1441   BIC:                         3.493e+04\n",
        "Df Model:                          18                                         \n",
